@@ -143,16 +143,18 @@ CHECK_LIBRARY_EXISTS (dl dlopen "" HAVE_LIBDL)
 IF (HAVE_LIBDL)
   USE_LIBRARY (dl)
 ENDIF (HAVE_LIBDL)
-IF (NOT HAVE_LIBDL)
-  CHECK_FUNCTION_EXISTS (dlopen HAVE_LIBDL)
-ENDIF (NOT HAVE_LIBDL)
+IF (HAVE_LIBDL)
+  SET (HAVE_DLOPEN 1)
+ELSE ()
+  CHECK_FUNCTION_EXISTS (dlopen HAVE_DLOPEN)
+ENDIF (HAVE_LIBDL)
 
 CHECK_FUNCTION_EXISTS (_dyld_present HAVE_DYLD)
 CHECK_FUNCTION_EXISTS (snprintf HAVE_SNPRINTF)
 CHECK_FUNCTION_EXISTS (__snprintf HAVE___SNPRINTF)
 
 CONFIG_DEFINE (HAVE_DLFCN_H)
-CONFIG_DEFINE (HAVE_LIBDL)
+CONFIG_DEFINE (HAVE_DLOPEN)
 CONFIG_DEFINE (HAVE_DYLD)
 CONFIG_DEFINE (HAVE_SNPRINTF)
 CONFIG_DEFINE (HAVE___SNPRINTF)
